--- a/BinanceApiService/src/main/resources/application.properties
+++ b/BinanceApiService/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+stripe.api.key = stripe api key
+razorpay.api.key = razorpay api key
+razorpay.api.secret = razorpay api secret
