--- a/BinanceApiService/pom.xml
+++ b/BinanceApiService/pom.xml
@@ -93,6 +93,21 @@
 		    <artifactId>stripe-java</artifactId>
 		    <version>25.12.0</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-client</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.jayway.jsonpath</groupId>
+			<artifactId>json-path</artifactId>
+		</dependency>
 
 	</dependencies>
 
