--- a/BinanceApiService/src/main/resources/application.properties
+++ b/BinanceApiService/src/main/resources/application.properties
@@ -11,6 +11,26 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=your email
+spring.mail.password=your app password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+#stripe payment gatway
 stripe.api.key = stripe api key
+
+#razorpay payment gaytway
 razorpay.api.key = razorpay api key
 razorpay.api.secret = razorpay api secret
+
+# coingecko api key
+coingecko.api.key=your coin gecko api key
+
+# gemini api key
+gemini.api.key=your gemini api key
+
+#google oauth2 (optional)
+spring.security.oauth2.client.registration.google.client-id=your id
+spring.security.oauth2.client.registration.google.client-secret=your secret
