#Setup Database PostgresSQL

--- a/BinanceApiService/src/main/resources/application.properties
+++ b/BinanceApiService/src/main/resources/application.properties
@@ -1,15 +1,28 @@
 spring.application.name=BinanceApiService
 
 server.port=8085
-spring.datasource.url=jdbc:mysql://localhost:3306/binance
-spring.datasource.username=root
-spring.datasource.password=12345678
+#spring.datasource.url=jdbc:mysql://localhost:3306/binance
+#spring.datasource.username=root
+#spring.datasource.password=12345678
 
 #Hibernate Config
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+
+# PostgreSQL DataSource Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/binance
+spring.datasource.username=postgres
+spring.datasource.password=12345678
+
+# Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -26,10 +39,10 @@ razorpay.api.key = razorpay api key
 razorpay.api.secret = razorpay api secret
 
 # coingecko api key
-coingecko.api.key=your coin gecko api key
+coingecko.api.key=CG-zeFKpX52QM2sJzWoNHawBfKh
 
 # gemini api key
-gemini.api.key=your gemini api key
+gemini.api.key=AIzaSyB46uhuHl3_uRjmJqnQgLls3TPcGAD3F2c
 
 #google oauth2 (optional)
 spring.security.oauth2.client.registration.google.client-id=your id
