--- a/BinanceApiService/pom.xml
+++ b/BinanceApiService/pom.xml
@@ -114,7 +114,12 @@
 		    <groupId>org.postgresql</groupId>
 		    <artifactId>postgresql</artifactId>
 		</dependency>
-
+		
+		<dependency>
+		    <groupId>com.paypal.sdk</groupId>
+		    <artifactId>rest-api-sdk</artifactId>
+		    <version>1.14.0</version>
+		</dependency>
 
 	</dependencies>
 
