--- a/BinanceApiService/pom.xml
+++ b/BinanceApiService/pom.xml
@@ -8,7 +8,7 @@
 		<version>3.3.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.triquang</groupId>
+	<groupId>com.triquang.binance</groupId>
 	<artifactId>BinanceApiService</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>BinanceApiService</name>
