--- a/BinanceApiService/src/main/resources/application.properties
+++ b/BinanceApiService/src/main/resources/application.properties
@@ -15,7 +15,7 @@ server.port=8085
 # PostgreSQL DataSource Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/binance
 spring.datasource.username=postgres
-spring.datasource.password=12345678
+spring.datasource.password=tung
 
 # Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
@@ -26,7 +26,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=triquang.15qt@gmail.com
+spring.mail.username=ngoquangtung.24032001@gmail.com
 spring.mail.password=jyxybsxujvuclseo
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
